@@ -567,14 +567,11 @@ LIBHARP_API int harp_import(const char *filename, const char *operations, const 
             return -1;
         }
 
-        /* set source_product if it was empty */
+        /* set source_product if it was empty; we need this for the 'collocate_xxx()' operations to work */
         if (imported_product->source_product == NULL)
         {
-            imported_product->source_product = strdup(harp_basename(filename));
-            if (imported_product->source_product == NULL)
+            if (harp_product_set_source_product(product, filename) != 0)
             {
-                harp_set_error(HARP_ERROR_OUT_OF_MEMORY, "out of memory (could not duplicate string) (%s:%u)", __FILE__,
-                               __LINE__);
                 harp_product_delete(imported_product);
                 return -1;
             }
